# finanze

./: .bumpversion.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  finanze.spec  package.py  pyproject.toml  requirements-cd.txt  requirements-dev.txt  requirements-packaging.txt  requirements-selenium.txt  requirements-test.txt  requirements.txt  scheduled-update.sh  transpile.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: altstore-adp.yml  build-dev.yml  build-release.yml  ci.yml  create-release.yml  dev.yml  docker-image.yml  generate-release.yml  mobile-e2e.yml  release.yml
bank-scraper/: app.py
bank-scraper/domain/: auto_contributions.py  available_sources.py  bank.py  bank_data.py  constants.py  dezimal.py  exceptions.py  financial_entity.py  fiscal_year_simulation.py  global_position.py  historic.py  login.py  native_entities.py  position_aggregation.py  scrap_result.py  scraped_bank_data.py  scraped_data.py  transactions.py
bank-scrapper/: app.py
bank-scrapper/domain/: bank_data.py  currency_symbols.py
e2e/: playwright.config.ts
e2e/fixtures/: auth.ts  backend.ts
finanze/: __main__.py  app.py  args.py  logs.py  server.py
frontend/: Dockerfile  generate-env-config.sh
mobile/: .env  .gitignore  .prettierignore  .prettierrc.json  app.json  eslint.config.mjs  index.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  react-native.config.js  tsconfig.json
resources/: example_config.yml  template_config.yml
tests/: conftest.py
(+1620 files in other folders)
