[project]
name = "finanze"
authors = [{ name = "Marcos Alvarez", email = "contact@marcosav.com" }]
version = "0.1.2"
description = "A personal portfolio tracker app that helps you dentralize a variety of assets and investments across different financial entites."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]
fallback_version = "0.1.2"